# ai-trader

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
agent/: README.md  architecture-overview.md  data-layer-design.md  development-guidelines.md  development-plan.md  execution-layer-design.md  portfolio-management-design.md  risk-management-design.md  strategy-layer-design.md  system-safety-design.md  tech-stack.md  user-interface-design.md  vectorbt-integration-plan.md
agent/.obsidian/: workspace.json
config/: alpaca.yaml  default.yaml  paper_trading.yaml
docs/: CLI_MONITORING.md  INTEGRATION_TESTING.md  INTEGRATION_TEST_RESULTS.md  PHASE1_SUMMARY.md  PHASE2_PLAN.md  PHASE2_QUICKSTART.md  SEED_LIST_MANAGEMENT.md  STRATEGY_EVALUATION_GUIDE.md  UNIVERSE_REFACTORING_SUMMARY.md  UNIVERSE_SELECTION.md  UNIVERSE_SELECTION_USAGE.md  VALIDATION_RESULTS.md
notebooks/: 01_backtesting_tutorial.ipynb  README.md
scripts/: CLI_TOOLS_QUICK_REFERENCE.md  EXAMPLE_OUTPUT.md  README.md  compare_benchmark.py  compare_strategies.py  monitor_trading.py  optimize_strategy.py  paper_trading.py  quick_integration_test.sh  run_integration_tests.py  run_strategy.py  select_universe.py  test_strategy.py  test_vectorbt.py  test_vectorbt_simple.py  update_seed_list.py  verify_alpaca.py  view_data.py  view_portfolio.py
scripts/testing/: test_universe_manual.py  test_universe_quick.py
src/: README.md
src/analysis/: __init__.py  strategy_comparison.py
src/api/: __init__.py  backtest_api.py  (+7 more)
(+86 files in other folders)
